[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Trade.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture2D" id=2]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=3]
[ext_resource path="res://images/trade_mode/box.png" type="Texture2D" id=4]
[ext_resource path="res://cards/collection_backgrounds/card_back.png" type="Texture2D" id=5]
[ext_resource path="res://scenes/Collection_card.tscn" type="PackedScene" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource( 2 )

[node name="TradeMenu" type="Control" parent="."]
editor/display_folded = true
offset_right = 413.0
offset_bottom = 305.0

[node name="CreateRoomButton" type="Button" parent="TradeMenu"]
offset_left = 31.492
offset_top = 106.0
offset_right = 124.492
offset_bottom = 141.0
theme = ExtResource( 3 )
text = "Create"

[node name="CancelButton" type="Button" parent="TradeMenu/CreateRoomButton"]
visible = false
offset_left = 115.0
offset_right = 203.0
offset_bottom = 34.0
theme = ExtResource( 3 )
text = "Cancel"

[node name="RoomCodeLabel" type="Label" parent="TradeMenu/CreateRoomButton/CancelButton"]
offset_left = -3.03006
offset_top = -40.8224
offset_right = 124.97
offset_bottom = -6.82236
text = "Room Code:"

[node name="RoomCodeVarLabel" type="Label" parent="TradeMenu/CreateRoomButton/CancelButton/RoomCodeLabel"]
offset_left = 134.131
offset_top = -1.16635
offset_right = 174.131
offset_bottom = 32.8336
text = "NA"

[node name="RoomJoinLineEdit" type="LineEdit" parent="TradeMenu"]
offset_left = 43.0
offset_top = 183.0
offset_right = 184.0
offset_bottom = 227.0
theme = ExtResource( 3 )

[node name="JoinRoomButton" type="Button" parent="TradeMenu/RoomJoinLineEdit"]
offset_left = 157.648
offset_top = 2.49906
offset_right = 227.648
offset_bottom = 36.4991
text = "Join"

[node name="Button" type="Button" parent="TradeMenu"]
offset_left = 29.1588
offset_top = 20.9944
offset_right = 91.1588
offset_bottom = 54.9944
theme = ExtResource( 3 )
text = "back"

[node name="RichTextLabel" type="RichTextLabel" parent="TradeMenu"]
offset_left = 385.0
offset_top = 20.0
offset_right = 1278.0
offset_bottom = 314.0
theme = ExtResource( 3 )
text = "Welcome to Mocra Trade! Here you can exchange your cards with other players (only one you know). To trade with your friend:

	1) Somebody click \"create\" button and a code will appear  
	2) The other paste the code next to \"join\" button and then press the button
	
Have a nice Tarde!"

[node name="TradeRoom" type="Control" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0

[node name="OpponentOffer" type="Control" parent="TradeRoom"]
editor/display_folded = true
offset_left = 302.186
offset_top = 84.0668
offset_right = 342.186
offset_bottom = 124.067

[node name="BoxTexture" type="TextureRect" parent="TradeRoom/OpponentOffer"]
offset_left = 851.438
offset_top = 19.828
offset_right = 1251.44
offset_bottom = 219.828
texture = ExtResource( 4 )

[node name="OfferLabel" type="Label" parent="TradeRoom/OpponentOffer"]
offset_left = 868.933
offset_top = 31.4915
offset_right = 1048.93
offset_bottom = 65.4915
theme = ExtResource( 3 )
text = "Opponent Offer:"

[node name="Card1Texture" type="TextureRect" parent="TradeRoom/OpponentOffer"]
offset_left = 872.472
offset_top = 66.9043
offset_right = 997.472
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card1" parent="TradeRoom/OpponentOffer/Card1Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 66.6814, 75.7134 )
scale = Vector2( 0.5, 0.5 )

[node name="Card2Texture" type="TextureRect" parent="TradeRoom/OpponentOffer"]
offset_left = 993.48
offset_top = 66.9043
offset_right = 1118.48
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card2" parent="TradeRoom/OpponentOffer/Card2Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 64.4906, 75.7134 )
scale = Vector2( 0.5, 0.5 )

[node name="Card3Texture" type="TextureRect" parent="TradeRoom/OpponentOffer"]
offset_left = 1117.01
offset_top = 66.9043
offset_right = 1242.01
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card3" parent="TradeRoom/OpponentOffer/Card3Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 62.8594, 75.7134 )
scale = Vector2( 0.5, 0.5 )

[node name="MyOffer" type="Control" parent="TradeRoom"]
editor/display_folded = true
offset_left = -511.779
offset_top = 84.0668
offset_right = -471.779
offset_bottom = 124.067

[node name="BoxTexture" type="TextureRect" parent="TradeRoom/MyOffer"]
offset_left = 851.438
offset_top = 19.828
offset_right = 1251.44
offset_bottom = 219.828
texture = ExtResource( 4 )

[node name="OfferLabel" type="Label" parent="TradeRoom/MyOffer"]
offset_left = 868.933
offset_top = 31.4915
offset_right = 1048.93
offset_bottom = 65.4915
theme = ExtResource( 3 )
text = "My Offer:"

[node name="Card1Texture" type="TextureRect" parent="TradeRoom/MyOffer"]
offset_left = 872.472
offset_top = 66.9043
offset_right = 997.472
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card1" parent="TradeRoom/MyOffer/Card1Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 61.544, 75.7134 )
scale = Vector2( 0.5, 0.5 )

[node name="Card2Texture" type="TextureRect" parent="TradeRoom/MyOffer"]
offset_left = 993.48
offset_top = 66.9043
offset_right = 1118.48
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card2" parent="TradeRoom/MyOffer/Card2Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 64.7224, 75.7134 )
scale = Vector2( 0.5, 0.5 )

[node name="Card3Texture" type="TextureRect" parent="TradeRoom/MyOffer"]
offset_left = 1117.01
offset_top = 66.9043
offset_right = 1242.01
offset_bottom = 216.904
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 5 )

[node name="card3" parent="TradeRoom/MyOffer/Card3Texture" instance=ExtResource( 6 )]
visible = false
position = Vector2( 65.9142, 75.7133 )
scale = Vector2( 0.5, 0.5 )

[node name="MyCards" type="Control" parent="TradeRoom"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.002
offset_top = 36.2959
offset_right = 475.002
offset_bottom = 436.296

[node name="TextureRect" type="TextureRect" parent="TradeRoom/MyCards"]
offset_right = 950.0
offset_bottom = 400.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TradeRoom/MyCards"]
offset_left = 583.33
offset_top = 23.8
offset_right = 690.33
offset_bottom = 57.8
theme = ExtResource( 3 )
text = "My Cards:"

[node name="PreviousPageButton" type="Button" parent="TradeRoom/MyCards"]
offset_left = 28.3932
offset_top = 151.987
offset_right = 61.3932
offset_bottom = 229.987
theme = ExtResource( 3 )
text = "<"

[node name="NextPageButton" type="Button" parent="TradeRoom/MyCards"]
offset_left = 883.528
offset_top = 151.987
offset_right = 916.528
offset_bottom = 229.987
theme = ExtResource( 3 )
text = ">"

[node name="Lock" type="Control" parent="TradeRoom"]
editor/display_folded = true
offset_left = 761.186
offset_top = 82.5595
offset_right = 1120.19
offset_bottom = 311.56

[node name="LockButton" type="Button" parent="TradeRoom/Lock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -53.4936
offset_right = 74.5
offset_bottom = -19.4936
theme = ExtResource( 3 )
toggle_mode = true
text = "Lock Trade"

[node name="ConfirmButton" type="Button" parent="TradeRoom/Lock"]
offset_left = 88.6532
offset_top = 117.0
offset_right = 269.653
offset_bottom = 151.0
theme = ExtResource( 3 )
disabled = true
text = "Confirm Trade"

[node name="TradeInfos" type="Control" parent="TradeRoom"]
editor/display_folded = true
offset_left = 772.186
offset_top = 238.067
offset_right = 1117.19
offset_bottom = 354.067

[node name="TradingWithLabel" type="Label" parent="TradeRoom/TradeInfos"]
offset_left = -7.47998
offset_top = 17.6533
offset_right = 147.52
offset_bottom = 51.6533
theme = ExtResource( 3 )
text = "Trading with:"

[node name="TradingWithVar" type="Label" parent="TradeRoom/TradeInfos/TradingWithLabel"]
offset_left = 160.254
offset_right = 315.254
offset_bottom = 34.0
theme = ExtResource( 3 )
text = "Nobody :'("

[node name="RoomCodeLabel" type="Label" parent="TradeRoom/TradeInfos"]
offset_left = -7.47998
offset_top = 50.9735
offset_right = 147.52
offset_bottom = 84.9735
theme = ExtResource( 3 )
text = "Room Code:"

[node name="RoomCodeVar" type="Label" parent="TradeRoom/TradeInfos/RoomCodeLabel"]
offset_left = 136.454
offset_right = 291.454
offset_bottom = 34.0
theme = ExtResource( 3 )
text = "Na"

[node name="LeaveButton" type="Button" parent="TradeRoom/TradeInfos"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -38.0
offset_right = 68.0
theme = ExtResource( 3 )
text = "Leave Trade"

[connection signal="pressed" from="TradeMenu/CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="pressed" from="TradeMenu/RoomJoinLineEdit/JoinRoomButton" to="." method="_on_JoinRoomButton_pressed"]
[connection signal="pressed" from="TradeMenu/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TradeRoom/MyCards/PreviousPageButton" to="." method="_on_PreviousPageButton_pressed"]
[connection signal="pressed" from="TradeRoom/MyCards/NextPageButton" to="." method="_on_NextPageButton2_pressed"]
[connection signal="toggled" from="TradeRoom/Lock/LockButton" to="." method="_on_LockButton_toggled"]
[connection signal="pressed" from="TradeRoom/Lock/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="TradeRoom/TradeInfos/LeaveButton" to="." method="_on_LeaveButton_pressed"]
